# number-roller

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  bot_settings.toml.example  flake.nix  pyproject.toml  shell.nix
src/nr_utils/: files.py  message.py  migrate.py
src/number_roller/: __main__.py
tests/: test_hot_reload.py  test_messages.py  test_migration.py  test_new_messages.py
