[project]
name = "number-roller"
version = "1.0.0"
description = "A Discord bot that rolls numbers on a schedule for you!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiocron>=2.1", "hikari>=2.1.0", "pytz>=2025.2"]

[dependency-groups]
dev = [
    "pyrefly>=0.26.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N", "ANN", "B", "Q", "PTH", "SIM"]
lint.ignore = ["ANN002", "ANN003"]
line-length = 128

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
